--- a/WpfApplication1/WpfApplication1/Settings.xaml
+++ b/WpfApplication1/WpfApplication1/Settings.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:adorners="http://gu.se/Adorners"
         xmlns:local="clr-namespace:SchoolSafeID"
         xmlns:wpfx1="http://schemas.xceed.com/wpf/xaml/toolkit"
-        mc:Ignorable="d"
+        mc:Ignorable="d"        
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="14"
@@ -15,10 +16,12 @@
         Padding="20" WindowStyle="ToolWindow" ResizeMode="NoResize"
         Title="Settings" Icon="favicon.ico" HorizontalAlignment="Center" VerticalAlignment="Center" 
         HorizontalContentAlignment="Center" Width="700" Height="350" WindowStartupLocation="CenterScreen">
-    <Grid>
 
-        <TextBox Name="school_url" Width="595" Height="75" HorizontalAlignment="Left" Margin="60,55,0,192" />
-        <Button Style="{StaticResource MyButton}" Content="SUBMIT" Margin="60,170,409,0" Height="85" Width="220"/>
+    <StackPanel Margin="0,10,0,0">
+        <ComboBox Style="{StaticResource ssid_ComboBox}" Margin="20,20,20,0" Name="printersList" Width="Auto" />
+        <Label Margin="20,0,20,0">School URL:</Label>
+        <TextBox Style="{StaticResource MyTextField}" Name="school_url" adorners:Watermark.Text="School URL" Margin="20,0,9.6,0" Width="Auto"></TextBox>
+        <Button Name="btnSettings" Style="{StaticResource MyButton}" Content="Save" Height="85" Width="220" HorizontalAlignment="Left" Margin="20" Click="btnSettings_Click"/>
+    </StackPanel>
 
-    </Grid>
 </Window>
