update new changes
update new changes

--- a/WpfApplication1/WpfApplication1/BadgePreview.xaml
+++ b/WpfApplication1/WpfApplication1/BadgePreview.xaml
@@ -65,7 +65,7 @@
             </WrapPanel>
 
             <StackPanel Margin="0 50 0 0" HorizontalAlignment="Center" Width="960">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Button Style="{StaticResource MyButton}" Content="Yes, Print Badge" Name="btnYesPrint" Click="btnYesPrint_Click" />
                     <Button Style="{StaticResource MyButton}" Content="No, Make Changes" Background="#AC1315" Name="btnNoMakeChanges" Click="btnNoMakeChanges_Click" />
                     <Button Style="{StaticResource MyButton}" Content="No Badge Needed" Background="#FC0" Foreground="#111" Name="btnNoBadgeNeeded" Click="btnNoBadgeNeeded_Click" />
