--- a/WpfApplication1/WpfApplication1/ScanLicense.xaml
+++ b/WpfApplication1/WpfApplication1/ScanLicense.xaml
@@ -8,7 +8,7 @@
       xmlns:wpfx1="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d"       
       FocusManager.FocusedElement="{Binding ElementName=txtBarcodeData}"
-      Title="Scan License" Loaded="Page_Loaded">
+      Title="Scan License" Loaded="Page_Loaded" Focusable="True">
 
     <DockPanel LastChildFill="True">
 
@@ -44,7 +44,7 @@
                 <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="Legal First Name" IsEnabled="False" />
                 <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Legal Last Name" IsEnabled="False" />
                 <wpfx1:MaskedTextBox Mask="00/00/0000" Style="{StaticResource MsTextField}" Name="txt_DateOfBirth" IsEnabled="False"/>
-                <TextBox TextWrapping="Wrap" Width="0" Name="txtBarcodeData" Text="@ANSI 636058050002DL00410217ZO02580064DLDAQY081724446DCSEADSDDENDACSTACYDDFNDADLYNNDDGNDCADDCBNONEDCDNONEDBC2DAU504DAYGRNDAG7016 STONYCREEK DRIVEDAIOKLAHOMACITYDAJOKDAK731320000DCFNONEDCGUSADAW118DBA07312019DBB12091979DBD08262015ZOZOANZOBNZOCRENEWALZODZOE5579ZOF55ZOG33.50ZOHZOINZOJN" Opacity="0" Focusable="True" Height="0" KeyUp="txtBarcodeData_KeyUp" TextChanged="txtBarcodeData_TextChanged" />
+                <TextBox TextWrapping="Wrap" Width="0" Name="txtBarcodeData" Text="" Opacity="0" Focusable="True" Height="0" KeyUp="txtBarcodeData_KeyUp" TextChanged="txtBarcodeData_TextChanged" />
                 <!--<wpfx1:DateTimePicker TextAlignment="Left" AutoCloseCalendar="True" TimePickerVisibility="Hidden" Format="ShortDate" Style="{StaticResource MyDateTextField}" Name="txt_dob" Watermark="Date of Birth" />-->                
                 <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="700" Margin="0 10 0 20" Click="Button_Click"/>
                 <TextBlock Width="700" TextBlock.LineHeight="36" FontSize="26" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="Hold your drivers license up to the scanning device as shown. The back of your license should face the scanning device so that it can read the 2D bar code. Once you hear the beep, please confirm your first name, last name and date of birth. Hit submit to continue."></TextBlock>
