Almost complete the visitor sign-in process.

--- a/WpfApplication1/WpfApplication1/BadgePreview.xaml
+++ b/WpfApplication1/WpfApplication1/BadgePreview.xaml
@@ -17,7 +17,7 @@
                     <ImageBrush ImageSource="Resources/poweredby_schoolsafe.png" Opacity="1" Stretch="None" AlignmentX="Right"/>
                 </StackPanel.Background>
 
-                <Button Style="{StaticResource MyButton}" Margin="10 10 0 0" Content="GO BACK" Background="Gray" Click="btn_GoBack_Click" />
+                <Button Name="btn_GoBack" Style="{StaticResource MyButton}" Margin="10 10 0 0" Content="GO BACK" Background="Gray" Click="btn_GoBack_Click" />
             </StackPanel>
         </StackPanel>
 
