--- a/WpfApplication1/WpfApplication1/HomePage.xaml
+++ b/WpfApplication1/WpfApplication1/HomePage.xaml
@@ -32,9 +32,9 @@
             <TextBlock Name="txtWelcomeText" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Center" TextAlignment="Center" />
 
             <StackPanel Orientation="Horizontal" Margin="0 50 0 0">
-                <Button Style="{StaticResource MyButton}" Content="SIGN IN" Click="btn_Signin_Click" />
-                <Button Style="{StaticResource MyButton}" Content="SIGN OUT" Background="#AC1315" Click="btn_Signout_Click" />
-                <Button Style="{StaticResource MyButton}" Content="STUDENT SIGN IN" Background="#FC0" Foreground="#111" />
+                <Button Style="{StaticResource MyButton}" Content="VISITOR SIGN IN" Click="btn_Signin_Click" />
+                <Button Style="{StaticResource MyButton}" Content="VISITOR SIGN OUT" Background="#AC1315" Click="btn_Signout_Click" />
+                <Button Name="btnStudentSignin" Style="{StaticResource MyButton}" Content="STUDENT SIGN IN" Background="#FC0" Foreground="#111" Click="btnStudentSignin_Click" />
                 <Button Style="{StaticResource MyButton}" Content="STUDENT SIGN OUT" Background="#3a5fcd" />
             </StackPanel>
 
