--- a/WpfApplication1/WpfApplication1/App.xaml
+++ b/WpfApplication1/WpfApplication1/App.xaml
@@ -18,14 +18,33 @@
                 <Setter Property="CornerRadius" Value="6" />
             </Style>-->
 
+            <Style x:Key="AlternatingListBoxItem" TargetType="{x:Type ListBoxItem}">
+                <Style.Triggers>
+
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="0">
+                        <Setter Property="Background" Value="#19000000"></Setter>
+                    </Trigger>
+
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="#19f39611"></Setter>
+                    </Trigger>
+
+                </Style.Triggers>
+            </Style>
+
             <Style x:Key="preview" TargetType="WrapPanel">
                 <Setter Property="Width" Value="555" />
                 <Setter Property="Height" Value="320" />
                 <Setter Property="Margin" Value="0 8" />
                 <Setter Property="VerticalAlignment" Value="Center" />
             </Style>
-            
-            
+
+            <Style x:Key="ssidLabel" TargetType="Label">
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="Margin" Value="0 7 0 0" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+
             <Style x:Key="MyTextField" TargetType="TextBox">
                 <Setter Property="Width" Value="700" />
                 <Setter Property="Height" Value="70" />
