--- a/WpfApplication1/WpfApplication1/ParentSignout.xaml
+++ b/WpfApplication1/WpfApplication1/ParentSignout.xaml
@@ -31,8 +31,9 @@
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0">
             <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,10" Text="STUDENT SIGN-OUT"></TextBlock>
             <StackPanel>
-                <Label Style="{StaticResource ssidLabel}">Enter Student Name:</Label>
-                <ComboBox Margin="0"
+                <StackPanel Name="show_suggestions">
+                    <Label Style="{StaticResource ssidLabel}">Enter Student Name:</Label>
+                    <ComboBox Margin="0"
                 Style="{StaticResource ssid_ComboBox}"
                 HorizontalAlignment="Center"             
                 VerticalAlignment="Center" 
@@ -41,14 +42,26 @@
                 PreviewTextInput="PreviewTextInput_EnhanceComboSearch"
                 PreviewKeyUp="PreviewKeyUp_EnhanceComboSearch"
                 DataObject.Pasting="Pasting_EnhanceComboSearch" IsEditable="True" Name="cmbStudent">
-                    <ComboBox.ItemContainerStyle>
-                        <Style TargetType="ComboBoxItem">
-                            <Setter Property="Height" Value="80" />
-                            <Setter Property="Padding" Value="15" />
-                            <Setter Property="VerticalAlignment" Value="Center" />
-                        </Style>
-                    </ComboBox.ItemContainerStyle>
-                </ComboBox>
+                        <ComboBox.ItemContainerStyle>
+                            <Style TargetType="ComboBoxItem">
+                                <Setter Property="Height" Value="80" />
+                                <Setter Property="Padding" Value="15" />
+                                <Setter Property="VerticalAlignment" Value="Center" />
+                            </Style>
+                        </ComboBox.ItemContainerStyle>
+                    </ComboBox>
+                </StackPanel>
+
+                <StackPanel Name="manual_entry_label" Orientation="Horizontal">
+                    <Label Width="400" Style="{StaticResource ssidLabel}">Enter Student Name:</Label>
+                    <Label Margin="15 0 15 0" Width="120" Style="{StaticResource ssidLabel}">Grade:</Label>
+                </StackPanel>
+
+                <StackPanel Name="manual_entry_fields" Orientation="Horizontal">
+                    <TextBox Margin="0" Width="400" Style="{StaticResource MyTextField}" Name="txtStudentName" />
+                    <TextBox Margin="15 0 15 0" Width="120" Style="{StaticResource MyTextField}" Name="txtStudentGrade" />
+                    <Button Name="btnAddNew" Width="150" Style="{StaticResource MyButton}" Content="ADD NEW" Margin="0" Height="72" Click="btnAddNew_Click"/>
+                </StackPanel>
 
                 <Label Name="lblSelectedStudents" Visibility="Collapsed" Style="{StaticResource ssidLabel}">Selected Student(s):</Label>
                 <ListBox BorderThickness="1" Visibility="Collapsed" BorderBrush="#ccc" IsSynchronizedWithCurrentItem="True"  Name="selecteStudents" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="110" AlternationCount="2" ItemContainerStyle="{StaticResource AlternatingListBoxItem}">
